fix: remove rank from header on mobile

--- a/src/widgets/Header/ui/Header.module.scss
+++ b/src/widgets/Header/ui/Header.module.scss
@@ -69,6 +69,14 @@
     }
   }
 
+  .rank {
+    object-fit: contain;
+
+    @media (max-width: 768px) {
+      display: none;
+    }
+  }
+
   .button {
     flex-shrink: 0;
     color: #aaa;
